:wolf: moving some files around

--- a/static/fish-cake.html
+++ b/static/fish-cake.html
@@ -26,7 +26,7 @@
 
     <canvas width="800" height="600" id="you-know"></canvas>
     <script>
-      svv.swarm("you-know");
+      svv.lezgo("you-know");
     </script>
   </body>
 </html>
